--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,66 +61,98 @@
 
     <script type="text/javascript">
         function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
+            document.getElementById("mySidenav").style.width = "100%";
         }
 
         function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("mySidenav").style.width = "0";
         }
     </script>
 
 
 
     <script type="text/javascript">
+
         var myVar;
 
         function myFunction() {
 
-        document.body.style.backgroundImage = "url('../Image/Scan.jpg')";
-        document.body.style.backgroundSize = "100% 100%";
 
-        myVar = setTimeout(showPage, 1500);
+            if (location.href.includes('_') == false) {
+
+                document.body.style.backgroundImage = "url('../Image/Scan.jpg')";
+                document.body.style.backgroundSize = "100% 100%";
+
+                myVar = setTimeout(showPage, 1500);
+
+            }
+            else {
+                showPage();
+
+            }
         }
 
         function showPage() {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("myDiv").style.display = "block";
-        document.body.style.backgroundImage = "none";
 
+                document.getElementById("loader").style.display = "none";
+                document.getElementById("myDiv").style.display = "block";
+                document.body.style.backgroundImage = "none";
         }
 
         function openCategory(j, l) {
 
-        for (var i = 1; i <= l; i++) {
-        if (i == j) {
-        document.getElementById("business" + i).style.display = "block";
-        document.getElementsByClassName("tab1")[i].style.color = "#f44336";
-        document.getElementsByClassName("tab1")[i].style.borderColor = "#f44336";
+            for (var i = 1; i <= l; i++) {
+                if (i == j) {
+                    document.getElementById("business" + i).style.display = "block";
+                    document.getElementsByClassName("tab1")[i].style.color = "#f44336";
+                    document.getElementsByClassName("tab1")[i].style.borderColor = "#f44336";
 
 
-        }
-        else {
-        document.getElementById("business" + i).style.display = "none";
-        document.getElementsByClassName("tab1")[i].style.color = "#000000";
-        document.getElementsByClassName("tab1")[i].style.borderColor = "#000000";
-        }
-        }
+                }
+                else {
+                    document.getElementById("business" + i).style.display = "none";
+                    document.getElementsByClassName("tab1")[i].style.color = "#000000";
+                    document.getElementsByClassName("tab1")[i].style.borderColor = "#000000";
+                }
+            }
 
-        location.href = "#menu";
-
-        }
-
-        function openMenu() {
-        document.getElementById("menu").style.display = "block";
-        document.getElementById("myDiv").style.display = "none";
+            location.href = "#menu";
 
         }
 
+
+
+        function openMenu(value) {
+
+
+            if (location.href != value) {
+
+                window.location.href = '@Url.Action("Index", "Home")'.split('_')[0] + value;
+
+            }
+            else {
+                window.location.href = '@Url.Action("Index", "Home")';
+            }
+
+        }
         function hideMenu() {
-        document.getElementById("menu").style.display = "none";
-        document.getElementById("myDiv").style.display = "block";
+            document.getElementById("menu").style.display = "none";
+            document.getElementById("myDiv").style.display = "block";
 
         }
+
+        var myVar1 = setTimeout(myTimer, 100);
+
+        function myTimer() {
+
+            if (location.href.includes('_')) {
+                document.getElementById("menu").style.display = "block";
+                document.getElementById("myDiv").style.display = "none";
+            }
+
+        }
+
+
     </script>
 
 
@@ -139,166 +171,162 @@
                 <img src="~/Image/@path" class="responsive" width="600" height="400" alt="@Model.First().BusinessName" />
             </div>
 
+
+
             <div style="margin-top: 100px; text-align:center;">
 
-                <a id="menubutton" href="#menu" class="tab1"
-                   style="font-size:88px;border:3px solid;width:323px;height:150px;border-radius:10%;color:black;background-color:white;"
-                   onclick="openMenu()">MENU</a>
-            </div>
-
-
-            <div align="right">
-                <select id="mySelect">
-
-                    <option value="">Language</option>
-
-                    @foreach (var item in @Model.First().BusinessLanguage.Split(";"))
+                @foreach (var item in @Model.First().BusinessLanguage.Split(";"))
+                {
+                    @if (item != "")
                     {
-                        @if (item != "")
+                        @if (item == "al")
                         {
-                            <option value="_@item">@item</option>
+                            <a id="menubutton" href="#menu" class="tab1"
+                               style="font-size: 30px; border: 3px solid; width: 100px; height: 75px; border-radius: 10%; color: black; background-color: white;"
+                               onclick="openMenu('_@item')">MENU SHQIP</a>
+                        }
+                        else
+                        {
+                            <a id="menubutton" href="#menu" class="tab1"
+                               style="font-size: 30px; border: 3px solid; width: 100px; height: 75px; border-radius: 10%; color: black; background-color: white;"
+                               onclick="openMenu('_@item')">MENU ANGLISHT</a>
                         }
                     }
-                </select>
+                }
             </div>
-
-            <script>
-
-                document.getElementById('mySelect').addEventListener('change', function () {
-                window.location.href = '@Url.Action("Index", "Home")' + this.value;
-                });
-            </script>
 
         </div>
 
 
 
-    <div class="container black padding-64 xxlarge" id="menu" style="display:none; height:105%;">
-        <div class="content;">
-            <a onclick="hideMenu();" class="close"> </a>
+        <div class="container black padding-64 xxlarge" id="menu" style="display:none; height:105%;">
+            <div class="content;">
+                <a onclick="hideMenu();" class="close"> </a>
 
-            <div style="padding-left: 26px;">
+                <div style="padding-left: 26px;">
 
-                @{
-                    var j = 1;
-                    var i = 1;
-                    var name = "";
-                    var subname = "";
-                    var name1 = "";
-                }
-
-
-
-
-
-                @foreach (Menu menu in Model)
-                {
-                    @if (menu.CategoryName != name1)
-                    {
-                        var cName = "category" + j;
-
-                        <button id="@{@cName}" class="tab1"
-                        onclick="openCategory(@j,@Model.Select(x => x.CategoryName).Distinct().Count())">@menu.CategoryName</button>
-                        j++;
-                        name1 = menu.CategoryName;
+                    @{
+                        var j = 1;
+                        var i = 1;
+                        var name = "";
+                        var subname = "";
+                        var name1 = "";
                     }
 
-                }
-            </div>
-
-            @{
-                string path1 = "";
-                string curreny = "";
-            }
 
 
-            @foreach (Menu menu1 in Model)
-            {
-                path1 = menu1.ImageID + ".jpg";
 
-                @if (menu1.BusinessID == 1)
-                {
-                    curreny = "€";
-                }
 
-                else
-                {
-                    curreny = "L";
-                }
-
-                @if (menu1.CategoryName != name)
-                {
-                    var fName = "business" + i;
-
-                    @if (i == 1)
+                    @foreach (Menu menu in Model)
                     {
+                        @if (menu.CategoryName != name1)
+                        {
+                            var cName = "category" + j;
 
-                        <div id="@{@fName}" style="display:block;">
+                            <button id="@{@cName}" class="tab1"
+                                    onclick="openCategory(@j,@Model.Select(x => x.CategoryName).Distinct().Count())">
+                                @menu.CategoryName
+                                </button>
+                                j++;
+                                name1 = menu.CategoryName;
+                            }
 
-                            <br /> <br />
+                    }
+                </div>
+
+                @{
+                    string path1 = "";
+                    string curreny = "";
+                }
+
+
+                @foreach (Menu menu1 in Model)
+                {
+                    path1 = menu1.ImageID + ".jpg";
+
+                    @if (menu1.BusinessID == 1)
+                    {
+                        curreny = "€";
+                    }
+
+                    else
+                    {
+                        curreny = "L";
+                    }
+
+                    @if (menu1.CategoryName != name)
+                    {
+                        var fName = "business" + i;
+
+                        @if (i == 1)
+                        {
+
+                            <div id="@{@fName}" style="display:block;">
+
+                                <br /> <br />
+
+                                <img src="~/Image/Category_Image/@path1?uploadTime=2" class="responsive" alt="Foto" />
+
+                                @foreach (Menu menu in Model)
+                                {
+
+                                    @if (menu.CategoryName == menu1.CategoryName)
+                                    {
+                                        @if (menu.SubCategoryName != subname)
+                                        {
+
+                                            <h3 style="font-size: larger;text-align:left;background-color:whitesmoke;text-transform: uppercase;">
+                                                @menu.SubCategoryName
+                                            </h3>
+                                        }
+
+                                        <h1 style="font-size:xx-large;">@menu.Description<span class="span">@menu.Price @curreny</span></h1>
+                                        <p class="text" style="font-family:'Bell MT';text-transform: lowercase;">@menu.MetaDescription</p>
+                                        <hr>
+                                    }
+                                    subname = menu.SubCategoryName;
+
+                                }
+
+                            </div>
+                        }
+                        <div id="@{@fName}" style="display:none;">
+
+                            <br /><br />
 
                             <img src="~/Image/Category_Image/@path1?uploadTime=2" class="responsive" alt="Foto" />
 
                             @foreach (Menu menu in Model)
                             {
 
+
                                 @if (menu.CategoryName == menu1.CategoryName)
                                 {
                                     @if (menu.SubCategoryName != subname)
                                     {
 
-                                        <h3 style="font-size: larger;text-align:left;background-color:whitesmoke;text-transform: uppercase;">
+                                        <h3 style="font-size: larger;text-align:left;background-color:whitesmoke;text-transform:uppercase;">
                                             @menu.SubCategoryName
                                         </h3>
                                     }
-
-                                    <h1 style="font-size:xx-large;">@menu.Description<span class="span">@menu.Price @curreny</span></h1>
+                                    <h1 style="font-size: xx-large;">@menu.Description <span class="span">@menu.Price @curreny</span></h1>
                                     <p class="text" style="font-family:'Bell MT';text-transform: lowercase;">@menu.MetaDescription</p>
                                     <hr>
                                 }
                                 subname = menu.SubCategoryName;
 
+
                             }
 
                         </div>
+                        i++;
+                        name = menu1.CategoryName;
+
                     }
-                    <div id="@{@fName}" style="display:none;">
-
-                        <br /><br />
-
-                        <img src="~/Image/Category_Image/@path1?uploadTime=2" class="responsive" alt="Foto" />
-
-                        @foreach (Menu menu in Model)
-                        {
-
-
-                            @if (menu.CategoryName == menu1.CategoryName)
-                            {
-                                @if (menu.SubCategoryName != subname)
-                                {
-
-                                    <h3 style="font-size: larger;text-align:left;background-color:whitesmoke;text-transform:uppercase;">
-                                        @menu.SubCategoryName
-                                    </h3>
-                                }
-                                <h1 style="font-size: xx-large;">@menu.Description <span class="span">@menu.Price @curreny</span></h1>
-                                <p class="text" style="font-family:'Bell MT';text-transform: lowercase;">@menu.MetaDescription</p>
-                                <hr>
-                            }
-                            subname = menu.SubCategoryName;
-
-
-                        }
-
-                    </div>
-                    i++;
-                    name = menu1.CategoryName;
-
                 }
-            }
+            </div>
         </div>
-    </div>
 
-</body>
+    </body>
 
 </html>
